simulating the game with bots is done, now it needs refactoring (:

--- a/OpenPoker/Views/Room/Index.cshtml
+++ b/OpenPoker/Views/Room/Index.cshtml
@@ -5,31 +5,42 @@
                 <p style="text-align:center">Player 1</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
+                <p style="text-align:center" id="bet">0</p>
             </div>
             <div class="player" id="player2">
                 <p style="text-align:center">Player 2</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
+                <p style="text-align:center" id="bet">0</p>
             </div>
             <div class="player" id="player3">
                 <p style="text-align:center">Player 3</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
+                <p style="text-align:center" id="bet">0</p>
             </div>
             <div class="player" id="player4">
                 <p style="text-align:center">Player 4</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
+                <p style="text-align:center" id="bet">0</p>
             </div>
             <div class="player" id="player5">
                 <p style="text-align:center">Player 5</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
+                <p style="text-align:center" id="bet">0</p>
             </div>
             <div class="player" id="player6">
                 <p style="text-align:center">Player 6</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
+                <p style="text-align:center" id="bet">0</p>
+            </div>
+            <div class="player" id="deck">
+                <img src="~/cards/10_of_clubs.png" id="card" />
+                <img src="~/cards/2_of_clubs.png" id="card" />
+                <img src="~/cards/2_of_diamonds.png" id="card" />
             </div>
         </div>
     </div>
