--- a/OpenPoker/wwwroot/css/site.css
+++ b/OpenPoker/wwwroot/css/site.css
@@ -119,7 +119,15 @@ div#table {
     width : 100%;
     height: 800px;
 }
-
+p#caption {
+    display: inline;
+    text-align: center;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%,0);
+    white-space: nowrap;
+}
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
