New message system between client and server, fully implemented bot game's simulation

--- a/OpenPoker/Views/Room/Index.cshtml
+++ b/OpenPoker/Views/Room/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
-    <div class="card" id="table">
+    <div class="card" id="table" hidden="hidden">
         <div class="card-body">
+            <p id="endResult"></p>
             <div class="player" id="player1">
                 <p style="text-align:center">Player 1</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
