--- a/OpenPoker/Views/Home/Index.cshtml
+++ b/OpenPoker/Views/Home/Index.cshtml
@@ -8,13 +8,15 @@
 <h2>Game rooms</h2>
 <table>
     <thead>
-        <tr><th>Name</th><th>Game Cycle</th></tr>
+        <tr><th>Name</th><th>Game Cycle</th> <th>Players</th></tr>
     </thead>
     <tbody>
         @foreach (GameRoom room in Model)
         {
             <tr>
-                <td>@Html.ActionLink(room.name, "Index", "Room",new { roomId = room.id} )</td> <td>@room.game.curCycle</td>
+                <td>@Html.ActionLink(room.name, "Index", "Room", new { roomId = room.id })</td>
+                <td>@room.game.curCycle</td>
+                <td>@room.game.players.Count/@Game.MAX_PLAYER_COUNT</td>
             </tr>
         }
     </tbody>
