--- a/OpenPoker/wwwroot/css/site.css
+++ b/OpenPoker/wwwroot/css/site.css
@@ -128,6 +128,17 @@ p#caption {
     transform: translate(-50%,0);
     white-space: nowrap;
 }
+p#endResult {
+    
+    text-align: center;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%,0);
+    width: 300px;
+    height: auto;
+    word-wrap: break-word;
+}
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
