Now player palce shifts to the bottom

--- a/OpenPoker/Views/Room/Index.cshtml
+++ b/OpenPoker/Views/Room/Index.cshtml
@@ -2,39 +2,39 @@
     <div class="card" id="table" hidden="hidden">
         <div class="card-body">
             <p id="endResult"></p>
-            <div class="player" id="player1">
-                <p style="text-align:center">Player 1</p>
+            <div class="player" id="player1" hidden="hidden">
+                <p style="text-align:center" id="name">Player 1</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
                 <p style="text-align:center" id="bet">0</p>
                 
             </div>
-            <div class="player" id="player2">
-                <p style="text-align:center">Player 2</p>
+            <div class="player" id="player2" hidden="hidden">
+                <p style="text-align:center" id="name">Player 2</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
                 <p style="text-align:center" id="bet">0</p>
             </div>
-            <div class="player" id="player3">
-                <p style="text-align:center">Player 3</p>
+            <div class="player" id="player3" hidden="hidden">
+                <p style="text-align:center" id="name">Player 3</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
                 <p style="text-align:center" id="bet">0</p>
             </div>
-            <div class="player" id="player4">
-                <p style="text-align:center">Player 4</p>
+            <div class="player" id="player4" hidden="hidden">
+                <p style="text-align:center" id="name">Player 4</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
                 <p style="text-align:center" id="bet">0</p>
             </div>
-            <div class="player" id="player5">
-                <p style="text-align:center">Player 5</p>
+            <div class="player" id="player5" hidden="hidden">
+                <p style="text-align:center" id="name">Player 5</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
                 <p style="text-align:center" id="bet">0</p>
             </div>
-            <div class="player" id="player6">
-                <p style="text-align:center">Player 6</p>
+            <div class="player" id="player6" hidden="hidden">
+                <p style="text-align:center" id="name">Player 6</p>
                 <img src="~/cards/10_of_clubs.png" id="card" />
                 <img src="~/cards/2_of_clubs.png" id="card" />
                 <p style="text-align:center" id="bet">0</p>
