--- a/OpenPoker/Views/Home/Index.cshtml
+++ b/OpenPoker/Views/Home/Index.cshtml
@@ -5,27 +5,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h2>Game rooms</h2>
-<table>
-    <thead>
-        <tr><th>Name</th><th>Game Cycle</th> <th>Players</th></tr>
-    </thead>
-    <tbody>
-        @foreach (GameRoom room in Model.Rooms)
-        {
-            <tr>
-                <td>@Html.ActionLink(room.name, "Index", "Room", new { roomId = room.id })</td>
-                <td>@room.game.curCycle</td>
-                <td>@room.game.players.Count(p => !p.IsDisconnected)/@Game.MAX_PLAYER_COUNT</td>
-            </tr>
-        }
-    </tbody>
-</table>
-<div style="margin: 5px">
-    <div style="display:inline">Pages:</div>
-    @for (int i = 1; i <= Model.CountOfPages; i++)
-    {
-        <div style="display:inline">@Html.ActionLink(i.ToString(), "Index", "Home", new { page = i })</div>
-    }
-</div>
 
+    <div id="playButton">
+        <button type="button" class="btn btn-primary" 
+                onclick="location.href='@Url.Action("Play", "Home")'" 
+                >Play Poker</button>
+    </div>
