--- a/OpenPoker/wwwroot/css/site.css
+++ b/OpenPoker/wwwroot/css/site.css
@@ -51,6 +51,17 @@ button.accept-policy {
   line-height: inherit;
 }
 
+#playButton {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+#playButton button{
+    padding:40px;
+    font-size: 50px;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
