--- a/OpenPoker/wwwroot/css/site.css
+++ b/OpenPoker/wwwroot/css/site.css
@@ -51,6 +51,12 @@ button.accept-policy {
   line-height: inherit;
 }
 
+#accNavBlock * {
+    vertical-align:middle;
+    display:inline-block;
+    margin:0;
+}
+
 #playButton {
     position: absolute;
     top: 50%;
