more complex replay system (with interface)

--- a/OpenPoker/Views/Replay/Index.cshtml
+++ b/OpenPoker/Views/Replay/Index.cshtml
@@ -3,14 +3,36 @@
     ViewData["Title"] = "Index";
 }
 @using OpenPoker.Logging
-@model List<KeyValuePair<OpenPoker.GameEngine.Action, TimeArguments>>
+@model string
 
 
 
 <h1>Index</h1>
 
-@foreach(var item in Model)
-{
-    <p>@(item.Key.Name + "=======" + item.Value.Time.ToString())</p>
-}
+<div class="card" id="table" hidden="hidden">
+    <div class="card-body">
+        <p id="endResult"></p>
+        @for (int i = 1; i <= 6; i++)
+        {
+            <div class="player" id=@("player" + i.ToString()) hidden="hidden">
+                <p style="text-align:center" id="name">Player @i</p>
+                <img src="~/cards/back.png" id="card" />
+                <img src="~/cards/back.png" id="card" />
+                <p style="text-align:center" id="bet">0</p>
+            </div>
 
+        }
+        <div class="player" id="deck">
+            <img src="~/cards/back.png" id="card" />
+            <img src="~/cards/back.png" id="card" />
+            <img src="~/cards/back.png" id="card" />
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        var text = '@Html.Raw(Model)';
+    </script>
+    <script src="~/js/ReplayScript.js"></script>
+}
