--- a/OpenPoker/Views/Shared/_Layout.cshtml
+++ b/OpenPoker/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <div style="margin: 5px" id="accNavBlock">
                     @if (User.Identity.IsAuthenticated)
                     {
-                    <p>@User.Identity.Name</p>
+                    <p>@Html.ActionLink(User.Identity.Name, "Profile", "Account", new { id = User.Identity.Name } )</p>
                     <form method="post" asp-controller="Account" asp-action="Logout">
                         <input type="submit" value="Logout" class="btn btn-light" />
                     </form>
